# ultimate-zip-password-recover

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  DISTRIBUTION.md  INTERFACES.md  LICENSING.md  MAXIMIZING_RECOVERY.md  ROADMAP.md  TECH_STACK.md
packaging/rules/: README.md
packaging/win/: uzpr.iss  uzpr.spec
packaging/winget/manifests/l/LuisPCFialho/UltimateZipPasswordRecover/0.1.0/: LuisPCFialho.UltimateZipPasswordRecover.installer.yaml  LuisPCFialho.UltimateZipPasswordRecover.locale.en-US.yaml  LuisPCFialho.UltimateZipPasswordRecover.yaml
packaging/wordlists/: README.md
packaging/wordlists/pt-PT/: pt_anos.txt  pt_cidades.txt  pt_clubes.txt  pt_nomes.txt  pt_palavras.txt
scripts/: _extract_research.py  bootstrap_assets.py  build_installer.py  create_icon.py  fetch_wordlists.py  gauntlet_test.py  make_zipcrypto.py  smoke_test.py
scripts/licensing/: generate_vendor_keys.py  issue_license.py  send_license.py
scripts/winget/: prepare_manifest.py
src/uzpr/: __init__.py  __main__.py  app.py  cli.py
src/uzpr/archive/: __init__.py  detect.py  hashcat_mode.py  rar2john.py  rar_inspect.py  signatures.py  zip2john.py  zip_inspect.py
src/uzpr/core/: budget.py  capability.py  dedup.py  hints.py  orchestrator.py  potfile.py
src/uzpr/core/stages/: protocol.py  s01_known_password.py  s02_partial_mask.py  s03_smart_wordlist.py  s04_top_passwords.py  s05_dictionary.py  s06_john_rules.py  s07_hashcat_rules.py  s08_mask_attack.py  s09_hybrid.py  s10_prince.py  s11_markov.py  s12_bruteforce.py  s13_bkcrack.py  s14_combinator.py
src/uzpr/engines/: bkcrack.py  hashcat.py  john.py  native.py  process_utils.py  tool_manager.py
src/uzpr/licensing/: __init__.py  fingerprint.py  keys.py  license.py  machine_id.py  store.py  verify.py
src/uzpr/persistence/: encryption.py  models.py  repo.py
src/uzpr/persistence/migrations/: 0001_init.sql
src/uzpr/ui/: app.py  async_bridge.py  main_window.py  nag.py  theme.py  wizard.py
src/uzpr/ui/pages/: about.py  active_jobs.py  history.py  home.py  new_job_wizard.py  settings.py
src/uzpr/ui/widgets/: candidate_ticker.py  drop_zone.py  speed_chart.py  stage_card.py
src/uzpr/update/: __init__.py  checker.py  installer_launch.py
src/uzpr/updater/: __init__.py  check.py  download.py
src/uzpr/util/: hashing.py  logging.py  paths.py  settings_store.py  system.py
src/uzpr/wordlist/: __init__.py  dates.py  filters.py  generator.py  masks.py  mutations.py  prince.py
tests/fixtures/: create_test_archives.py
tests/integration/: test_bkcrack_autodetect.py  test_stage1_known_password.py
tests/unit/: test_archive_detect.py  test_budget.py  test_ev_scheduler.py  test_licensing.py  test_nag.py  test_prince_elements.py  test_prince_unhinted.py  test_settings_store.py  test_signatures.py  test_updater.py  test_wizard.py  test_wordlist.py
